[build-system]
requires = ["hatchling", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[project]
name = "tomorrow-client"
version = "0.0.1"
description = "A Python client for the tomorrow.io API"
license = { file = "LICENSE" }
readme = "README.md"
authors = [
    {name = 'Joey Chilson', email = 'joeychilson@outlook.com'}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.10.6",
]

[dependency-groups]
lint = [
    "ruff>=0.9.4",
]

[project.urls]
Homepage = "https://github.com/joeychilson/tomorrow-client"
Documentation = "https://github.com/joeychilson/tomorrow-client/blob/main/README.md"
Repository = "https://github.com/joeychilson/tomorrow-client.git"
Issues = "https://github.com/joeychilson/tomorrow-client/issues"

[tool.hatch.build.targets.wheel]
packages = ["tomorrow_client"]

[tool.ruff]
line-length = 120
